ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pricinghub-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  rules:
    - http:
        paths:
          - path: /ativos
            pathType: Prefix
            backend:
              service:
                name: infocadastrais
                port:
                  number: 8080
          - path: /volume/
            pathType: Prefix
            backend:
              service:
                name: alarmes-funcionais
                port:
                  number: 8080
          - path: /alarmes
            pathType: Prefix
            backend:
              service:
                name: alarmes-funcionais
                port:
                  number: 8080
          - path: /alarme/
            pathType: Prefix
            backend:
              service:
                name: alarmes-funcionais
                port:
                  number: 8080
          - path: /preco
            pathType: Prefix
            backend:
              service:
                name: precificacao
                port:
                  number: 8080
          - path: /pedidos
            pathType: Prefix
            backend:
              service:
                name: recebepedidos
                port:
                  number: 8080
